--- a/src/main/resources/com/biscuittaiger/budgettrackerx/dashboardX.css
+++ b/src/main/resources/com/biscuittaiger/budgettrackerx/dashboardX.css
@@ -10,11 +10,16 @@
     -fx-translate-y: 0.5em;
     -fx-translate-x: 1em;
 }
-#notificationButton {
-    -fx-background-color: #252728;
-    -fx-background-radius: 1em; /* Use em for relative size */
-    -fx-translate-x: 31em;
-    -fx-translate-y: 0.5em;
+#dateTimeLabel{
+    -fx-text-fill: WHite;
+    -fx-font-size: 35px;
+    -fx-translate-y: 25px;
+    -fx-translate-x: 55px;
+    -fx-background-color: #1e1e1e;
+    -fx-background-radius: 10px;
+    -fx-padding: 6px;
+    -fx-min-height: 60px;
+    -fx-min-width: 400px;
 }
 #monthMenuButton {
     -fx-background-color: #252728;
@@ -47,8 +52,14 @@
 }
 #savingGoalsLabel{
     -fx-text-fill: WHITE;
-    -fx-translate-y:1em;
+    -fx-translate-y:4em;
     -fx-translate-x: 2em;
+}
+#savingHeaderLabel{
+    -fx-font-size: 20px;
+    -fx-text-fill: WHITE;
+    -fx-translate-y:0em;
+    -fx-translate-x: 1em;
 }
 .menu-button {
     -fx-base: #252728;
@@ -84,6 +95,8 @@
     -fx-max-height: 1.3em;
     -fx-min-width: 2em;
 }
+
+
 #balanceChart,#expenseChart,#incomeChart,#budgetChart,#savingsChart{
     -fx-max-width: Infinity;
     -fx-max-height: Infinity;
@@ -193,8 +206,69 @@
     -fx-text-fill: white;
 }
 
-.scroll-pane, .scroll-bar:horizontal, .scroll-bar:vertical{
-    -fx-background-color:transparent;
-    -fx-background: #111011;
-    -fx-border-color: #111011;
+
+
+.table-view .column-header {
+    -fx-background-color: transparent ;
+    -fx-fill: WHITE;
+    -fx-text-alignment: left;
 }
+
+.table-view .column-header-background{
+    -fx-background-color: linear-gradient(to bottom, rgba(100, 100, 100, 0.27), rgba(58, 58, 58, 0.27));
+    -fx-background-insets: 0 11px 0 0;
+    -fx-padding: 0 0 5px 0;
+}
+
+.table-view .table-cell{
+    -fx-border-color: transparent;
+    -fx-padding: 5 0 5 10px;
+}
+.table-view .corner {
+    -fx-background-color: transparent;
+}
+
+.table-row-cell:odd{
+    -fx-background-color: #2f2f2f;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+.table-row-cell:even{
+    -fx-background-color: rgba(75, 75, 75, 0.07);
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+.table-view .virtual-flow .scroll-bar .increment-button,
+.table-view .virtual-flow .scroll-bar .decrement-button {
+    -fx-opacity: 0;
+    -fx-padding: 2;
+}
+
+.table-view .virtual-flow .scroll-bar:vertical,
+.table-view .virtual-flow .scroll-bar:vertical .track,
+.table-view .virtual-flow .scroll-bar:vertical .track-background,
+.table-view .virtual-flow .scroll-bar:horizontal,
+.table-view .virtual-flow .scroll-bar:horizontal .track,
+.table-view .virtual-flow .scroll-bar:horizontal .track-background {
+    -fx-background-color: #111011;
+}
+.table-view .virtual-flow .scroll-bar:horizontal .thumb,
+.table-view .virtual-flow .scroll-bar:vertical  .thumb{
+    -fx-background-color:  linear-gradient(to bottom, rgba(210, 168, 168, 0.27), rgba(95, 96, 95, 0.27));
+}
+.table-view{
+    -fx-background-color: #111011;
+
+}
+.table-view .table-cell .text {
+    -fx-fill: WHITE;
+}
+
+.table-view .filler{
+    -fx-background-color: transparent;
+}
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
+
+
