--- a/src/main/resources/com/biscuittaiger/budgettrackerx/dashboardX.css
+++ b/src/main/resources/com/biscuittaiger/budgettrackerx/dashboardX.css
@@ -19,8 +19,9 @@
     -fx-background-radius: 10px;
     -fx-padding: 6px;
     -fx-min-height: 60px;
-    -fx-min-width: 100px;
-    -fx-max-width: 450px;
+    -fx-min-width: 400px;
+    -fx-max-width: 400px;
+    -fx-alignment: center;
 }
 #monthMenuButton {
     -fx-background-color: #252728;
