--- a/src/main/resources/com/biscuittaiger/budgettrackerx/Transaction.css
+++ b/src/main/resources/com/biscuittaiger/budgettrackerx/Transaction.css
@@ -64,6 +64,9 @@
 .table-view .column-header .label {
     -fx-text-fill: white;
 }
+.table-row-cell:selected {
+    -fx-background-color: linear-gradient(#2a2929, rgba(255, 0, 0, 0.53));
+}
 
 #addButton{
     -fx-background-color: #10b880;
